* qt documentation-tree now is generated with informations from QT_DOCDIR/html/qt.xml     * disabled DocIndexDlg     * results.html of htdig now shows all pics     * made location of project documentation configurable

--- a/parts/doctreeview/README
+++ b/parts/doctreeview/README
@@ -7,3 +7,7 @@ With the index you can search for keywords in the kdelibs/qt api.
 Initially created by: Bernd Gehrmann <bernd@kdevelop.org>
 Maintainer: Sebastian Kratzert <skratzert@gmx.de>
 
+TODO:
+-make project docs nicer
+-change htdigindex, so that can be canceled
+-STL docs and kde2dev book have problems
