--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-03 Sebastian Kratzert <skratzert@gmx.de>
+    * qt documentation-tree now is generated with informations from QT_DOCDIR/html/qt.xml
+    * disabled DocIndexDlg
+    * results.html of htdig now shows all pics
+    * made location of project documentation configurable
+    
 2002-11-02 Sebastian Kratzert <skratzert@gmx.de>
     * Merged DoctreeConfig widget into one.
     * Removed KDoc folder
