adaption to KDevelop-2 behaviour: only show c++-debugger views when debugging

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2002-11-05 F@lk Brettschneider <falk@kdevelop.org>
-    * applied new patch of Heinz Hornung <Hornung-Heinz@t-online.de>
+    * adaption to KDevelop-2 behaviour: only show c++-debugger views when debugging
+    * and applied new patch of Heinz Hornung <Hornung-Heinz@t-online.de>
       that introduces View-->TreeToolViews and View-->OutputToolViews again
 
 2002-11-03 Sebastian Kratzert <skratzert@gmx.de>
