--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-09  August Hörandl  <august.hoerandl@gmx.at>
+    * cppsupport: addclassattributedlg, cppaddmethoddlg und cclonefunctiondlg use
+      the classstore (project and pre-parsed libraries) for completion of type names
+
 2002-11-08 Sebastian Kratzert <skratzert@gmx.de>
     * Reenabled KDELibsKDoc folder and made it removable
 
