--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-16  Harald Fernengel <harry@kdevelop.org>
+    * Added ability to raise the left/right/bottom toolviews in IDEAl mode
+    * appwizard now handles special characters better
+
 2002-11-09  August Hörandl  <august.hoerandl@gmx.at>
     * cppsupport: addclassattributedlg, cppaddmethoddlg und cclonefunctiondlg use
       the classstore (project and pre-parsed libraries) for completion of type names
