--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
+2002-11-24 Harald Fernengel <harry@kdevelop.org>
+    * Added QRegExp and KRegExp to RegExpTester
+
 2002-11-23 F@lk Brettschneider <falk@kdevelop.org>
     * now QextMDI-based mainframe loads/saves its docking state, extended KDevTopLevel interface therefore
-    
+
 2002-11-19  Caleb Tennis <caleb@aei-tech.com>
     * Prepped for Alpha 2 Release - KDEVELOP_3_0_ALPHA_2
 
