--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-28  Victor Röder  <victor_roeder@gmx.de>
+	* Added "Remove target"
+	* Minor fixes
+
 2002-11-28 F@lk Brettschneider <falk@kdevelop.org>
     * QEditor defaults to KDevelop-2 syntax highlighting colours
     * some bugfixes for the QextMDI-based UI modes
