--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-07 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+    * getActivedir() corrected in trollproject
+
+2002-12-07 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+    * Altered the Appname/location confussion in appwizard
+
 2002-12-05 F@lk Brettschneider <falk@kdevelop.org>
     * now also parts can load/save the project-related session by overriding the base class method in KDevPlugin
     * as an example, I moved changed some c++-debugger stuff to write to .kdevses instead of .kdevelop
