*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-12-13 F@lk Brettschneider <falk@kdevelop.org>
+    * added breakpoint support in QEditor (not yet finished)
+    
 2002-12-12 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
     * Added a new extended path ability to DomUtil so that the path can be qualified on attributes
       and multiple matches can be addressed with a zero-based index
